<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Instructions"
    tools:showIn="@layout/activity_instructions">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step0"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step1"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step1" />

            <ImageView
                android:id="@+id/imageView"
                android:contentDescription="@string/step1"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1"
                app:srcCompat="@drawable/step_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step2" />

            <ImageView
                android:id="@+id/imageView2"
                android:contentDescription="@string/step2"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/step_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:contentDescription="@string/step3"
                android:scaleType="fitCenter"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/step_3" />

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/step3"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/step_3_1" />

            <ImageView
                android:id="@+id/imageView32"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/step3"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView31"
                app:srcCompat="@drawable/step_3_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step4" />

            <ImageView
                android:id="@+id/imageView4"
                android:contentDescription="@string/step4"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/step_4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step5" />

            <ImageView
                android:id="@+id/imageView5"
                android:contentDescription="@string/step5"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/step_5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step6"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step6" />

            <ImageView
                android:id="@+id/imageView6"
                android:contentDescription="@string/step6"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:srcCompat="@drawable/step_6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/step7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step7"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/step_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/step7" />

            <ImageView
                android:id="@+id/imageView7"
                android:contentDescription="@string/step7"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:srcCompat="@drawable/step_7" />

            <ImageView
                android:id="@+id/imageView71"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/step3"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:srcCompat="@drawable/step_7_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:padding="3dp" >

            <TextView
                android:id="@+id/faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            >

            <TextView
                android:id="@+id/faq1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq1"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/faq_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/faq_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp" >

            <TextView
                android:id="@+id/faq2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq2"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/faq_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/faq_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq2" />

            <ImageView
                android:id="@+id/imageView_"
                android:contentDescription="@string/faq2"
                android:layout_width="367dp"
                android:layout_height="421dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq_2"
                app:srcCompat="@drawable/faq_pic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp"
            android:layout_marginBottom="60dp" >

            <TextView
                android:id="@+id/faq3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faq3"
                android:textSize="18sp"
                android:textColor="@color/primary_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/faq_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/faq_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faq3" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</ScrollView>